Bug 1653946 - Fix the expander icons visibility in dark mode r=dao
Also fix their hover and active states for non-dark mode.

Differential Revision: https://phabricator.services.mozilla.com/D84193

UltraBlame original commit: 46e7489b7a51c81a06d96dc37033f1309c1b5ecd

--- a/browser/themes/windows/places/editBookmark.css
+++ b/browser/themes/windows/places/editBookmark.css
@@ -56,138 +56,6 @@ MPL
 .
 *
 /
-media
-(
-prefers
--
-color
--
-scheme
-:
-dark
-)
-{
-.
-expander
--
-up
-.
-expander
--
-down
-{
--
--
-expander
--
-background
--
-color
--
-selected
-:
-rgba
-(
-249
-249
-250
-0
-.
-15
-)
-;
--
--
-expander
--
-background
--
-color
--
-hover
-:
-rgba
-(
-250
-250
-249
-0
-.
-1
-)
-;
-appearance
-:
-none
-;
-}
-.
-expander
--
-up
-:
-hover
-.
-expander
--
-down
-:
-hover
-{
-background
--
-color
-:
-var
-(
--
--
-expander
--
-background
--
-color
--
-hover
-)
-;
-}
-.
-expander
--
-up
-:
-active
-:
-hover
-.
-expander
--
-down
-:
-active
-:
-hover
-{
-background
--
-color
-:
-var
-(
--
--
-expander
--
-background
--
-color
--
-selected
-)
-;
-}
-}
 #
 editBookmarkPanelRows
 >
@@ -379,10 +247,6 @@ opacity
 0
 .
 8
-;
-color
-:
-unset
 ;
 }
 .
